# ai-text-humanizer

./: .env.example  .gitignore  .pre-commit-config.yaml  Bot.py  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GITHUB_PUBLISHING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config.yaml
docs/: ETHICS.md  USAGE.md
examples/: README.md  sample_text_es.txt
src/: main.py
src/detectors/: base_detector.py  gptzero.py  manager.py  sapling.py  writer.py  zerogpt.py
src/rewriter/: ollama_engine.py
src/utils/: config_loader.py  logger.py  text_processor.py
tests/: README.md  test_config_loader.py  test_text_processor.py
